kubernetes/ingress/ingress-nginx-example.yaml
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     nginx.ingress.kubernetes.io/rewrite-target: /   #new 
#   name: example-app
#   namespace: example-app
# spec:
#   tls:
#   - hosts:
#     - marcel.test
#     secretName: marcel-tls-secret
#   rules:
#   - host: marcel.test
#     http:
#       paths:
#       - path: /v1/hello
#         backend:
#           serviceName: example-service
#           servicePort: 80
#       - path: /v2/hello
#         backend:
#           serviceName: example-service
#           servicePort: 80


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: example-app
  namespace: example-app
spec:
  tls:
  - hosts:
    - marcel.test
    secretName: marcel-tls-secret
  rules:
  - host: marcel.test
    http:
      paths:
      - path: /v1/hello
        pathType: Prefix
        backend:
          service:
            name: example-service
            port:
              number: 80
      - path: /v2/hello
        pathType: Prefix
        backend:
          service:
            name: example-service
            port:
              number: 80
